<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <ImageView
        android:layout_width="143dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginStart="143dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="436dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="352dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="@dimen/edittext_padding"
        android:textColorHint="#A0A0A0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="292dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/edittext_padding"
        android:textColorHint="#A0A0A0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="228dp"
        android:padding="@dimen/button_padding"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="503dp"
        android:layout_marginBottom="193dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#808080"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="35dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="16dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAlignment="center"
        android:textColor="#808080"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
