<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/pet_info_card"
                android:layout_width="390dp"
                android:layout_height="114dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="13dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/features_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/schedule_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@drawable/back"
                android:padding="8dp"
                android:gravity="center" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <GridLayout
                    android:id="@+id/schedule_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="7"
                    android:rowCount="24" />

            </HorizontalScrollView>
            <TextView
                android:id="@+id/modify_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/click_a_cell_to_modify"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/edit_schedule_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/edit" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>