<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F5F5F5">

        <TextView
            android:id="@+id/dashboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/hi_chloe"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_pets"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_16" />

        <HorizontalScrollView
            android:id="@+id/pets_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16">

            <LinearLayout
                android:id="@+id/pets_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include
                    layout="@layout/pet_info_card"
                    android:layout_width="407dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminders"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_16" />

        <LinearLayout
            android:id="@+id/reminders_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/card_background"
            android:padding="@dimen/padding_8">

            <CheckBox
                android:id="@+id/vet_visits_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vet_visits_july_1_2023"
                android:layout_marginTop="@dimen/margin_8"
                android:visibility="visible"
                android:tag="vet_visits_reminder" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feeding_time_8_00_am"
                android:layout_marginTop="@dimen/margin_4"
                android:visibility="visible"
                android:tag="feeding_time_reminder" />


            <EditText
                android:id="@+id/edit_text_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_more_reminders"
                android:inputType="text" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recently_taken"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_16" />

        <HorizontalScrollView
            android:id="@+id/recent_images_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16">

            <LinearLayout
                android:id="@+id/recent_images_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/recent_image1"
                    android:layout_width="@dimen/recent_image_width"
                    android:layout_height="@dimen/recent_image_height"
                    android:src="@drawable/photo_placeholder"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_4" />

                <ImageView
                    android:id="@+id/recent_image2"
                    android:layout_width="@dimen/recent_image_width"
                    android:layout_height="@dimen/recent_image_height"
                    android:src="@drawable/photo_placeholder"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/margin_4" />

                <ImageView
                    android:id="@+id/recent_image3"
                    android:layout_width="@dimen/recent_image_width"
                    android:layout_height="@dimen/recent_image_height"
                    android:src="@drawable/photo_placeholder"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="@dimen/margin_4" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>